syntax = "proto3";

package android.emulation;

// A reinforcement learning (RL) observation which agents can use to build their
// internal state.
message Observation {
    // The moment this Observation was generated.
    int64 timestamp_us = 1;

    // A visual image represented as pixels.
    message Image {
        // The width in pixels of this image.
        int32 width = 1;
        // The height in pixels of this image.
        int32 height = 2;
        // The number of channels (e.g. 4 in RGBA) per pixels.
        int32 num_channels = 3;
        // The binary data associated with this image.
        bytes data = 4;
    }

    // The screenshot representing this observation.
    Image screen = 2;
}
